--- a/index.html
+++ b/index.html
@@ -63,17 +63,18 @@
   <h1>수학 게임 모음</h1>
 
   <div class="grid">
-    <a class="card" href="mathgame/dice/index.html">
-      <div class="t">주사위 보드게임</div>
-    </a>
+<a class="card" href="./dice/">
+  <div class="t">주사위 보드게임</div>
+</a>
 
-    <a class="card" href="mathgame/sudoku/index.html">
-      <div class="t">스도쿠 게임</div>
-    </a>
+<a class="card" href="./sudoku/">
+  <div class="t">스도쿠 게임</div>
+</a>
 
-    <a class="card" href="mathgame/slitherlink/index.html">
-      <div class="t">슬리더링크 게임</div>
-    </a>
+<a class="card" href="./slitherlink/">
+  <div class="t">슬리더링크 게임</div>
+</a>
+
   </div>
 
   <footer>만든이: 서민재</footer>
