--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
       <a class="card" href="./slitherlink/">
         <div class="t">슬리더링크 게임</div>
       </a>
+
+      <a class="card" href="./nonogram/">
+        <div class="t">네모로직 만들기</div>
+      </a>
     </div>
   </div>
 
