--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
 
   <div class="section">
-    <h2>수학 실험 모음</h2>
+    <h2>수학 논리 실험 모음</h2>
     <div class="grid">
       <a class="card" href="./dicesum/">
         <div class="t">주사위 실험 1</div>
@@ -107,6 +107,10 @@
 
       <a class="card" href="./dicesum2/">
         <div class="t">주사위 실험 2</div>
+      </a>
+
+      <a class="card" href="./dicesum2/">
+        <div class="t">로또 복권 시뮬레이터</div>
       </a>
     </div>
   </div>
