--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="t">주사위 실험 2</div>
       </a>
 
-      <a class="card" href="./dicesum2/">
+      <a class="card" href="./lotto/">
         <div class="t">로또 복권 시뮬레이터</div>
       </a>
     </div>
@@ -118,3 +118,4 @@
   <footer>만든이: 서민재</footer>
 </body>
 </html>
+
